[gd_scene format=3 uid="uid://4fldhbdmidvu"]

[ext_resource type="Script" uid="uid://hrdp12sofwvj" path="res://ui/start_menu.gd" id="1_loyqk"]
[ext_resource type="PackedScene" uid="uid://5eeg44mlhf7w" path="res://ui/credits_screen.tscn" id="3_8wri1"]
[ext_resource type="PackedScene" uid="uid://dc844wcasmwtp" path="res://world/world.tscn" id="3_o125m"]
[ext_resource type="AudioStream" uid="uid://b1fcxhe2wr6wr" path="res://sounds/main_menu_theme.wav" id="4_lb6g3"]

[sub_resource type="Animation" id="Animation_fl3bm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(14.311295, 5.4514847, -98.33925)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.17350318, -3.1415925, 1.5322188e-08)]
}

[sub_resource type="Animation" id="Animation_lb6g3"]
resource_name = "intro"
length = 8.1
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 1.4, 2.8333333, 3.6499999, 5, 6.8, 7.1),
"transitions": PackedFloat32Array(1, 0.26794344, 1, 1, 1, 1.8025008, 1, 0.26794344),
"update": 0,
"values": [Vector3(14.311295, 5.4514847, -98.33925), Vector3(14.311295, 5.4514847, -93.13036), Vector3(14.311295, 2.2165074, -70.822556), Vector3(6.9953814, 2.483581, -64.25455), Vector3(23.891937, 11.016133, -38.664284), Vector3(23.197906, 10.613025, -29.421331), Vector3(7.390155, 1.4947662, 8.880162), Vector3(14.311295, 5.4514847, -93.13036)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 1.4, 2.8333333, 3.6499999, 5, 6.8, 7.1),
"transitions": PackedFloat32Array(1, 0.26794344, 1, 1, 1, 1, 1, 0.26794344),
"update": 0,
"values": [Vector3(0.17350318, -3.1415925, 1.5322188e-08), Vector3(0.034906585, -3.1415927, 0), Vector3(0.06126126, 3.1415925, 2.9135725e-09), Vector3(0.06981317, 3.577925, 0), Vector3(-0.5490777, 2.071776, -0.0809981), Vector3(-0.5074626, 1.765373, -0.017294053), Vector3(0, 2.337537, 0), Vector3(0.034906585, -3.1415927, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fl3bm"]
_data = {
&"RESET": SubResource("Animation_fl3bm"),
&"intro": SubResource("Animation_lb6g3")
}

[node name="StartMenu" type="Node3D" unique_id=2026161783]
script = ExtResource("1_loyqk")
skip_start_menu = true

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=1421035731]

[node name="CanvasModulate" type="ColorRect" parent="CanvasLayer" unique_id=826333337]
color = Color(0, 0, 0, 1)

[node name="World" parent="." unique_id=1578379085 instance=ExtResource("3_o125m")]

[node name="Camera3D" type="Camera3D" parent="." unique_id=1993750418]
transform = Transform3D(-1, -1.0744818e-08, -1.4872876e-07, 1.509214e-08, 0.98498607, -0.17263398, 1.4835068e-07, -0.17263398, -0.98498607, 14.311295, 5.4514847, -98.33925)

[node name="StartMenuContainer" type="Control" parent="." unique_id=1010475022]
layout_mode = 3
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
grow_vertical = 2

[node name="BoxContainer" type="BoxContainer" parent="StartMenuContainer" unique_id=1537409163]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 82.0
offset_top = -205.0
offset_right = 432.0
offset_bottom = 205.0
grow_vertical = 2

[node name="HBoxContainer" type="VBoxContainer" parent="StartMenuContainer/BoxContainer" unique_id=1104248554]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 25

[node name="ButtonStart" type="Button" parent="StartMenuContainer/BoxContainer/HBoxContainer" unique_id=152155918]
custom_minimum_size = Vector2(350, 120)
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Start"

[node name="ButtonCredits" type="Button" parent="StartMenuContainer/BoxContainer/HBoxContainer" unique_id=920106298]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Credits"

[node name="ButtonQuit" type="Button" parent="StartMenuContainer/BoxContainer/HBoxContainer" unique_id=511829076]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Quit"

[node name="CreditsScreen" parent="." unique_id=1066099905 instance=ExtResource("3_8wri1")]
script = null

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." unique_id=124860]
stream = ExtResource("4_lb6g3")
volume_db = -3.0
autoplay = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1159157842]
libraries/ = SubResource("AnimationLibrary_fl3bm")

[connection signal="pressed" from="StartMenuContainer/BoxContainer/HBoxContainer/ButtonStart" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="StartMenuContainer/BoxContainer/HBoxContainer/ButtonCredits" to="." method="_on_button_credits_pressed"]
[connection signal="pressed" from="StartMenuContainer/BoxContainer/HBoxContainer/ButtonQuit" to="." method="_on_button_quit_pressed"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
